[gd_scene format=3 uid="uid://boo510n1qcg3p"]

[ext_resource type="Script" uid="uid://cylppr3pp8ip4" path="res://UI/main_menu.gd" id="1_b37jj"]
[ext_resource type="Texture2D" uid="uid://d217vs8mxmrac" path="res://Mini_Dungeon_v1.0/Characters/PlayerV3.png" id="1_uahxu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b37jj"]
atlas = ExtResource("1_uahxu")
region = Rect2(18.670929, 17.486862, 10.776321, 13.34211)

[node name="MainMenu" type="Control" unique_id=1255810043]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b37jj")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1839474223]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer" unique_id=100953485]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 47

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer" unique_id=302037495]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/VBoxContainer" unique_id=1735805027]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer" unique_id=507182063]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 93
bbcode_enabled = true
text = "[wave]The Dungeon of the Hidden Mask[/wave]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/MarginContainer/VBoxContainer" unique_id=2055633748]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 329
theme_override_constants/margin_right = 269
theme_override_constants/margin_bottom = 144

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2" unique_id=519399024]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer" unique_id=546543847]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Play"

[node name="Button3" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer" unique_id=1316731013]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Credits"

[node name="Button2" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer" unique_id=1059528954]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer" unique_id=961701833]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2" unique_id=1305284228]
layout_mode = 2
theme_override_constants/margin_top = 157
theme_override_constants/margin_right = 192

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2/MarginContainer" unique_id=675788356]
layout_mode = 2
texture = SubResource("AtlasTexture_b37jj")
expand_mode = 4
flip_h = true

[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/Button" to="." method="_on_button_pressed_play"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/Button3" to="." method="_on_button_3_pressed_credits"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/Button2" to="." method="_on_button_2_pressed_quit"]
